--- a/.github/workflows/deploy-docfx.yml
+++ b/.github/workflows/deploy-docfx.yml
@@ -22,7 +22,7 @@ jobs:
         run: dotnet tool install -g docfx
 
       - name: Build documentation
-        run: docfx build
+        run: docfx
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
